final project ready

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,7 +15,7 @@ html {
 
 @import 'blocks/promo';
 @import 'blocks/header';
-@import 'blocks/buttons';
+@import 'blocks/butt';
 @import 'blocks/trigger';
 @import 'blocks/why';
 @import 'blocks/title';
